@startuml Firestore_Structure

class Members {
    + userId
    --
    + username
    + nickname
    + email
    + profilePic
    + createdAt
}

class Clubs {
    + clubId
    --
    + clubName
    + description
    + createdAt
    + clubPic
}

class ClubMembers {
    + clubIdUserId
    --
    + clubId
    + userId
    + joinedAt
    + admin
}

class Posts {
    + postId
    --
    + userId
    + title
    + content
    + createdAt
    + imageUrl
    + likes : List<userId>
}

class Comments {
    + commentId
    --
    + postId
    + userId
    + content
    + createdAt
    + likes : List<userId>
}

Members "1" -- "*" ClubMembers : "joins"
Clubs "1" -- "*" ClubMembers : "has"
ClubMembers "*" -- "1" Members : "includes"
ClubMembers "*" -- "1" Clubs : "includes"

Members "1" -- "*" Posts : "creates"
Posts "1" -- "*" Comments : "receives"
Comments "*" -- "1" Posts : "on"

Members "1" -- "*" Comments : "writes"

@enduml